--- a/src/MdTranslator/MdTranslator.csproj
+++ b/src/MdTranslator/MdTranslator.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MdTranslate.Lib\MdTranslate.Lib.csproj" />
+    <ProjectReference Include="..\MdTranslator.Lib\MdTranslator.Lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
