--- a/Nuget/nuget.config
+++ b/Nuget/nuget.config
@@ -2,5 +2,6 @@
 <configuration>
     <activePackageSource>
         <add key="netcore package source" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
+        <add key="NugetOrg" value="https://api.nuget.org/v3/index.json" />
     </activePackageSource>
 </configuration>
