--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,9 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
-    restoreSolution: '$(solution)'
     feedsToUse: 'config'
     nugetConfigPath: 'Nuget/nuget.config'
 
