--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   inputs:
     command: 'restore'
     feedsToUse: 'config'
-    nugetConfigPath: '$(Build.SourcesDirectory)Nuget/nuget.config'
+    nugetConfigPath: '$(Build.SourcesDirectory)/Nuget/nuget.config'
 
 - task: VSBuild@1
   inputs:
