update config nuget

--- a/Nuget/nuget.config
+++ b/Nuget/nuget.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <activePackageSource>
+    <packageSources>
         <add key="netcore package source" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
         <add key="NugetOrg" value="https://api.nuget.org/v3/index.json" />
-    </activePackageSource>
+    </packageSources>
 </configuration>
