--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,13 @@ steps:
   inputs:
     command: 'build'
     projects: '$(Build.SourcesDirectory)/src/MdTranslator/MdTranslator.csproj'
-
+    
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
     publishWebProjects: false
     projects: '$(Build.SourcesDirectory)/src/MdTranslator/MdTranslator.csproj'
+    arguments: '-o $(Build.BinariesDirectory)'
     
 - task: ArchiveFiles@2
   inputs:
