--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,8 +43,8 @@ steps:
 
 - task: GitHubRelease@1
   inputs:
-    gitHubConnection: 'felpasl github oauth'
-    repositoryName: '$(Build.Repository.Name)'
+    gitHubConnection: 'felpasl pat'
+    repositoryName: 'felpasl/MdTranslator'
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'gitTag'
